完成最后信息存取

--- a/templates/about.html
+++ b/templates/about.html
@@ -375,7 +375,7 @@
     <!-- #copyrights end -->
 
 </footer>
-<script type="text/javascript" src="/static/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions_none.js"></script>
 
 
 <!-- #content end -->
