--- a/templates/index.html
+++ b/templates/index.html
@@ -459,7 +459,7 @@
                 <div class="faqbox">
                 <div class="title">{{ conference.conference_topic }}</div>
                 <p>
-                    <strong>Time</strong>: {{ conference.conferenec_start_time }} / <strong>location</strong>: {{ conference.conference_locations }}/ <strong>chair</strong>: {{ conference.chair_name }}
+                    <strong>Time</strong>: {{ conference.conference_start_time }} / <strong>location</strong>: {{ conference.conference_locations }}/ <strong>chair</strong>: {{ conference.chair_name }}
                 </p>
             </div>
             {% endfor %}
@@ -646,7 +646,7 @@
     <!-- #copyrights end -->
 
 </footer>
-<script type="text/javascript" src="/static/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions_none.js"></script>
 
 
 </body>
