--- a/templates/team.html
+++ b/templates/team.html
@@ -240,7 +240,7 @@
                 <div class="heading-block center">
                     <h3>GROUP MEMBERS</h3>
                 </div>
-                <ul class="testimonials-grid grid-2 clearfix nobottommargin">
+                <ul class="testimonials-grid grid-3 clearfix nobottommargin">
                     <li>
                         <div class="testimonial">
                             <div class="testi-image">
@@ -272,6 +272,28 @@
                             <div class="testi-content">
                                 <div class="testi-meta">
                                     JunYa Chen
+                                    <span>
+                                        <b>Group Member</b>
+                                    </span>
+                                    <span>
+                                        <br>
+                                        <a href="http://www.hdu.edu.cn/"
+                                           target="new">Hangzhou DianZi University</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="testimonial">
+                            <div class="testi-image">
+                                <a>
+                                    <img src="/static/images/group/ChunTaoLiao.jpg" alt="ChunTao Liao">
+                                </a>
+                            </div>
+                            <div class="testi-content">
+                                <div class="testi-meta">
+                                    ChunTao Liao
                                     <span>
                                         <b>Group Member</b>
                                     </span>
@@ -346,6 +368,6 @@
     </div>
     <!-- #copyrights end -->
 </footer>
-<script type="text/javascript" src="/static/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions_none.js"></script>
 
 </body>
