--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -231,5 +231,5 @@
     </div>
     <!-- #copyrights end -->
 </footer>
-<script type="text/javascript" src="/static/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions_none.js"></script>
 </body>
