--- a/templates/figure.html
+++ b/templates/figure.html
@@ -330,5 +330,5 @@
     <!-- #copyrights end -->
 
 </footer>
-<script type="text/javascript" src="/static/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions_none.js"></script>
 </body>
