--- a/templates/register.html
+++ b/templates/register.html
@@ -170,4 +170,4 @@
     </div>
     <!-- #copyrights end -->
 </footer>
-<script type="text/javascript" src="/static/js/functions.js"></script>
+<script type="text/javascript" src="/static/js/functions_none.js"></script>
