修正跳转错误

--- a/templates/figure.html
+++ b/templates/figure.html
@@ -165,13 +165,13 @@
                     <ul class="down-menu nav-menu" style="touch-action: pan-y;">
 
                         <li>
-                            <a href="index">
+                            <a href="../../index">
                                 <div>Home</div>
                             </a>
                         </li>
 
                         <li class="sub-menu">
-                            <a href="conference" class="sf-with-ul">
+                            <a href="../../conference" class="sf-with-ul">
                                 <div>conferences</div>
                             </a>
 
@@ -179,7 +179,7 @@
 
 
                         <li class="sub-menu">
-                            <a href="chairs" class="sf-with-ul">
+                            <a href="../../chairs" class="sf-with-ul">
                                 <div>Chairs</div>
                             </a>
 
@@ -187,7 +187,7 @@
 
 
                         <li class="sub-menu">
-                            <a href="about" class="sf-with-ul">
+                            <a href="../../about" class="sf-with-ul">
                                 <div>About Us</div>
                             </a>
 
@@ -257,13 +257,13 @@
                 <ul class="down-menu nav-menu" style="touch-action: pan-y;">
 
                     <li>
-                        <a href="index">
+                        <a href="../../index">
                             <div>Home</div>
                         </a>
                     </li>
 
                     <li class="sub-menu">
-                        <a href="conference" class="sf-with-ul">
+                        <a href="../../conference" class="sf-with-ul">
                             <div>conferences</div>
                         </a>
 
@@ -271,7 +271,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="chairs" class="sf-with-ul">
+                        <a href="../../chairs" class="sf-with-ul">
                             <div>Chairs</div>
                         </a>
 
@@ -279,7 +279,7 @@
 
 
                     <li class="sub-menu">
-                        <a href="about" class="sf-with-ul">
+                        <a href="../../about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
 
