--- a/templates/team.html
+++ b/templates/team.html
@@ -245,7 +245,7 @@
                         <div class="testimonial">
                             <div class="testi-image">
                                 <a>
-                                    <img src="/static/images/group/CengTingZhang.jpg" alt="ZeFei Zhu">
+                                    <img src="/static/images/group/CengTing Zhang.jpg" alt="CengTing Zhang">
                                 </a>
                             </div>
                             <div class="testi-content">
