修复conference页面不显示chair_name信息的bugs

--- a/templates/conference.html
+++ b/templates/conference.html
@@ -143,9 +143,9 @@
                 <div class="faqbox">
                     <div class="title">{{ confer.conference_topic }}</div>
                     <p>
-                        <strong>Time</strong>: {{ confer.conference_start_time }} /
-                        <strong>location</strong>: {{ confer.conference_locations }}/
-                        <strong>chair</strong>: {{ confer.chair_name }}
+                    <p><strong>Time</strong>: {{ confer.conference_start_time }} </p>
+                    <p><strong>location</strong>: {{ confer.conference_locations }} </p>
+                    <p><strong>chair</strong>: {{ confer.chair_name }} </p>
                     </p>
                 </div>
             {% endfor %}
