依然存在conference不显示chair_name的bug

--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -108,6 +108,11 @@
                             <div>About Us</div>
                         </a>
                     </li>
+                    <li class="sub-menu">
+                            <a href="team" class="sf-with-ul">
+                                <div>GROUP</div>
+                            </a>
+                        </li>
                 </ul>
                 <!-- #top-search end -->
             </nav>
@@ -203,6 +208,11 @@
                     <li class="sub-menu" >
                         <a href="about" class="sf-with-ul">
                             <div>About Us</div>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="team" class="sf-with-ul">
+                            <div>GROUP</div>
                         </a>
                     </li>
                 </ul>
