--- a/templates/index.html
+++ b/templates/index.html
@@ -604,6 +604,11 @@
 
 
                     </li>
+                    <li class="sub-menu">
+                        <a href="team" class="sf-with-ul">
+                            <div>GROUP</div>
+                        </a>
+                    </li>
 
 
                 </ul>
