--- a/templates/register.html
+++ b/templates/register.html
@@ -152,6 +152,11 @@
                             <div>AboutUs</div>
                         </a>
                     </li>
+                    <li class="sub-menu">
+                            <a href="team" class="sf-with-ul">
+                                <div>GROUP</div>
+                            </a>
+                        </li>
                 </ul>
                 <!-- #top-search end -->
             </nav>
