--- a/templates/team.html
+++ b/templates/team.html
@@ -144,7 +144,7 @@
                 <!-- Logo
                 ============================================= -->
                 <div style="position: absolute;top:6px">
-                    <img src="/static/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
+                    <img src="../static/images/web/hdu_ics_logo.png" alt="HDUlogo" style="height: 50px;">
                 </div>
                 <!-- #logo end -->
                 <!-- Primary Navigation
@@ -245,12 +245,12 @@
                         <div class="testimonial">
                             <div class="testi-image">
                                 <a>
-                                    <img src="/static/images/group/CengTing Zhang.jpg" alt="CengTing Zhang">
+                                    <img src="/static/images/group/CengTingZhang.jpg" alt="CengTing Zhang">
                                 </a>
                             </div>
                             <div class="testi-content">
                                 <div class="testi-meta">
-                                    CengTing Zhang (张辰婷)
+                                    CengTing Zhang
                                     <span>
                                         <b>Group Member</b>
                                     </span>
@@ -306,6 +306,50 @@
                             </div>
                         </div>
                     </li>
+                    <li>
+                        <div class="testimonial">
+                            <div class="testi-image">
+                                <a>
+                                    <img src="/static/images/group/YueMingQiu.jpg" alt="YueMing Qiu">
+                                </a>
+                            </div>
+                            <div class="testi-content">
+                                <div class="testi-meta">
+                                    YueMing Qiu
+                                    <span>
+                                        <b>Group Member</b>
+                                    </span>
+                                    <span>
+                                        <br>
+                                        <a href="http://www.hdu.edu.cn/"
+                                           target="new">Hangzhou DianZi University</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="testimonial">
+                            <div class="testi-image">
+                                <a>
+                                    <img src="/static/images/group/ZiJingWang.jpg" alt="ZiJingWang">
+                                </a>
+                            </div>
+                            <div class="testi-content">
+                                <div class="testi-meta">
+                                    ZiJing Wang
+                                    <span>
+                                        <b>Group Member</b>
+                                    </span>
+                                    <span>
+                                        <br>
+                                        <a href="http://www.hdu.edu.cn/"
+                                           target="new">Hangzhou DianZi University</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -346,6 +390,11 @@
                     <li class="sub-menu">
                         <a href="about" class="sf-with-ul">
                             <div>About Us</div>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="team" class="sf-with-ul">
+                            <div>GROUP</div>
                         </a>
                     </li>
                 </ul>
