--- a/templates/about.html
+++ b/templates/about.html
@@ -174,6 +174,11 @@
 
 
                     </li>
+                    <li class="sub-menu">
+                        <a href="team" class="sf-with-ul">
+                            <div>GROUP</div>
+                        </a>
+                    </li>
 
 
                 </ul>
@@ -331,6 +336,11 @@
                         </a>
 
 
+                    </li>
+                    <li class="sub-menu">
+                        <a href="team" class="sf-with-ul">
+                            <div>GROUP</div>
+                        </a>
                     </li>
 
 
