--- a/templates/conference.html
+++ b/templates/conference.html
@@ -186,6 +186,16 @@
                             <div>About Us</div>
                         </a>
                     </li>
+                    <li class="sub-menu">
+                            <a href="team" class="sf-with-ul">
+                                <div>GROUP</div>
+                            </a>
+                        </li>
+                    <li class="sub-menu">
+                        <a href="team" class="sf-with-ul">
+                            <div>GROUP</div>
+                        </a>
+                    </li>
                 </ul>
                 <!-- #top-search end -->
             </nav>
