--- a/templates/figure.html
+++ b/templates/figure.html
@@ -193,6 +193,11 @@
 
 
                         </li>
+                        <li class="sub-menu">
+                            <a href="../../team" class="sf-with-ul">
+                                <div>GROUP</div>
+                            </a>
+                        </li>
 
 
                     </ul>
@@ -284,6 +289,11 @@
                         </a>
 
 
+                    </li>
+                    <li class="sub-menu">
+                        <a href="team" class="sf-with-ul">
+                            <div>GROUP</div>
+                        </a>
                     </li>
 
 
