--- a/templates/figure.html
+++ b/templates/figure.html
@@ -218,7 +218,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="figure-border1" id="LECTURERS">
-                    <h2><a role="button" class="section-title">CHAIRS</a></h2>
+                    <h2><a role="button" class="section-title" style="margin-top: 60px">CHAIRS</a></h2>
                 </div>
                 <br>
                 <br>
