--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -66,7 +66,7 @@
         a:link {color: #ffffff;}    /* 未被访问的链接 */
         a:visited {color: #ffffff;} /* 已被访问的链接 */
         a:hover {color: #ffffff;}   /* 鼠标指针移动到链接上 */
-        a:active {color:#fffff;}  /* 正在被点击的链接 */
+        a:active {color:#ffffff;}  /* 正在被点击的链接 */
 
     </style>
 
@@ -124,7 +124,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="figure-border1">CHAIRS</h2>
+                <h2 class="figure-border1" style="margin-top: 60px">CHAIRS</h2>
             </div>
         </div>
     </div>
