--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -103,6 +103,11 @@
                             <div>Chairs</div>
                         </a>
                     </li>
+                    <li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
                     <li class="sub-menu" >
                         <a href="about" class="sf-with-ul">
                             <div>About Us</div>
@@ -205,6 +210,11 @@
                             <div>Chairs</div>
                         </a>
                     </li>
+                    <li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
                     <li class="sub-menu" >
                         <a href="about" class="sf-with-ul">
                             <div>About Us</div>
