--- a/templates/conference.html
+++ b/templates/conference.html
@@ -109,7 +109,11 @@
                             </a>
 
                         </li>
-
+<li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
 
                         <li class="sub-menu">
                             <a href="about" class="sf-with-ul">
@@ -118,7 +122,13 @@
 
 
                         </li>
+<li class="sub-menu">
+                            <a href="team" class="sf-with-ul">
+                                <div>GROUP</div>
+                            </a>
 
+
+                        </li>
 
                     </ul>
 
@@ -182,15 +192,16 @@
                         </a>
                     </li>
                     <li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
+                    <li class="sub-menu">
                         <a href="about" class="sf-with-ul">
                             <div>About Us</div>
                         </a>
                     </li>
-                    <li class="sub-menu">
-                            <a href="team" class="sf-with-ul">
-                                <div>GROUP</div>
-                            </a>
-                        </li>
+
                     <li class="sub-menu">
                         <a href="team" class="sf-with-ul">
                             <div>GROUP</div>
