--- a/templates/figure.html
+++ b/templates/figure.html
@@ -184,7 +184,11 @@
                             </a>
 
                         </li>
-
+<li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
 
                         <li class="sub-menu">
                             <a href="../../about" class="sf-with-ul">
@@ -281,7 +285,11 @@
                         </a>
 
                     </li>
-
+<li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
 
                     <li class="sub-menu">
                         <a href="../../about" class="sf-with-ul">
