--- a/templates/about.html
+++ b/templates/about.html
@@ -165,7 +165,11 @@
                         </a>
 
                     </li>
-
+<li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
 
                     <li class="sub-menu">
                         <a href="about" class="sf-with-ul">
@@ -328,7 +332,11 @@
                         </a>
 
                     </li>
-
+<li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
 
                     <li class="sub-menu">
                         <a href="about" class="sf-with-ul">
