--- a/templates/team.html
+++ b/templates/team.html
@@ -172,6 +172,11 @@
                             </a>
                         </li>
                         <li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
                             <a href="team" class="sf-with-ul">
                                 <div>GROUP</div>
                             </a>
@@ -387,6 +392,11 @@
                             <div>Chairs</div>
                         </a>
                     </li>
+                    <li class="sub-menu">
+                            <a href="/static/doc/MONET_2018_Alam.pdf" target="_blank" class="sf-with-ul">
+                                <div>Call for Paper</div>
+                            </a>
+                        </li>
                     <li class="sub-menu">
                         <a href="about" class="sf-with-ul">
                             <div>About Us</div>
